tests/ui/suggestions/silenced-binding-typo.stderr
error[E0425]: cannot find value `x` in this scope
  --> $DIR/silenced-binding-typo.rs:4:14
   |
LL |     let _y = x;
   |              ^
   |
help: a local variable with a similar name exists, consider renaming `_x` into `x`
   |
LL |     let x = 42;
   |         ~

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
